# NextGenDM

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert_commands.rs  download_commands.rs  grabber_commands.rs  media_commands.rs  mod.rs  settings_commands.rs
src-tauri/src/config/: settings.rs
src-tauri/src/db/: connection.rs  migrations.rs  repository.rs
src-tauri/src/engine/: downloader.rs  error.rs  limiter.rs  mod.rs  progress.rs  queue.rs  scheduler.rs  server.rs  types.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: fs.rs  url.rs
src/components/convert/: ConvertView.tsx
src/components/downloads/: AddDownloadDialog.tsx  DownloadInspector.tsx  DownloadItem.tsx  DownloadList.tsx  SiteGrabberDialog.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/settings/: SettingsDialog.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  (+1 more)
src/hooks/: useDownloads.ts  useTauriEvents.ts
src/lib/: tauri.ts  utils.ts
src/stores/: downloadStore.ts  settingsStore.ts
src/types/: download.ts  settings.ts
