[package]
name = "nextgendm"
version = "0.1.0"
description = "NextGenDM — A modern, high-performance download manager"
authors = ["Ayush Hande"]
edition = "2021"
license = "MIT"

[lib]
name = "nextgendm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nextgendm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri Core & Plugins ---
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async Runtime ---
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# --- HTTP Client ---
reqwest = { version = "0.12", features = ["stream", "json", "cookies", "socks"] }

# --- Database ---
rusqlite = { version = "0.32", features = ["bundled"] }

# --- Identifiers & Time ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Error Handling ---
thiserror = "2"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- URL & MIME ---
url = "2"
mime_guess = "2"

# --- Concurrency ---
dashmap = "6"

# --- Filesystem & Platform ---
dirs = "6"
opener = "0.8.5"
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors"] }
